# aiscrapelite

./: README.md  exec_commands.py  get_snapshot.py  main.py  pyproject.toml  requirements.txt
src/aiscrapelite/: exec_commands.py  extract_info.py  get_snapshot.py  html_to_markdown.py  llm.py  main.py  scraper.py
